2005-08-24  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * optimize.man: Corrected a few typos

2005-08-23  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : Fixed a small bug in [fromstr].
	* bigfloat.man : Trying to make it more clear about accuracy
			and interval computations.

2005-08-17  Kevin Kenny  <kennykb@acm.org>

	* optimize.tcl (nelderMead):     Added ::math::optimize::nelderMead,
	* optimize.test (nelderMead-*):  an implementation of multidimensional
	* optimize.man:                  optimization using the downhill
	simplex method of Nelder and Mead.  (Addition includes test cases
	and rudimentary documentation.)
	* exponential.tcl: Changed the demo script not to error out.
	
2005-08-09  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added the linear programming routines that were 
          described in the man page, but not actually there
        * Updated the test file and man page for this
        * Updated the pkgIndex.tcl file (optimize now at 1.0)

2005-08-05  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : Fixed a bug in [fromstr] when a number 
	  began with '+' ; another bug, in [fromdouble], when
	  a number began with '+' or '-'.
	* bigfloat.test : Added tests for fromdouble.

2005-08-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bigfloat.man: Replaced a number of ?...? occurences to markup
	  optional arguments with the more correct [opt ...].

2005-08-04  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat : Fixed a bug in [fromstr] when a number 
	  with an exponent beginning by 0 was given (like 1.1e+099)

	* bigfloat : Added a [fromdouble] new proc.

2005-08-01  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Changed the credits for Ed Hume at his request
          (anti-spam measure)

2005-07-26  Stephane Arnold

	* Changed in many places : '[pi $precision]' 
	  to '[pi $precision 1]' in which $precision is treated